--- a/style.css
+++ b/style.css
@@ -3,17 +3,30 @@ body {
     margin: 0;
     padding: 0;
     background: #FFF;
+    color: #333;
  
 }
 .hors-ecran {
     position: absolute;
     left: -99999rem;
  }
+.center-bloc{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.direction-col {
+    flex-direction: column;
+}
 
 a:hover {
     cursor: pointer;
+    font-size: x-large;
+}
+a{
     text-decoration: none;
-    
 }
 strong {
     font-weight: inherit;
@@ -67,16 +80,32 @@ header img {
     width: 100px;
 }
 
+.bloc-300-m{
+    width: 280px;
+    margin-right: 30px;
+}
+.bloc-300{
+    width: 250px;
+}
 
 #citation{
-    margin: 50px 20px 10px 20px;
     font-size: 20px;
     font-style: italic;
+    margin-bottom: 0;
+}
+
+.citation{
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    text-align: center;
+    margin-top: 50px;
 }
 
 .pdg{
     font-size: 14px;
     font-weight: 300;
+    margin-top: 0;
 }
 
 .bloc {
@@ -122,6 +151,9 @@ header img {
     color: rgba(255, 255, 255, .7);
 }
 
+.mg-droit{
+    margin-right: 20px;
+}
 .mg-md {
     margin-top: 10px;
     margin-bottom: 20px;
@@ -161,12 +193,11 @@ a[data-lightbox]:hover::before {
     font-size: 32px;
     width: 50px;
     height: 50px;
-    margin-left: -25px;
+    margin-left: 110px;
     border-radius: 50%;
     background: rgba(0, 0, 0, .6);
     color: #FFF;
     font-weight: 100;
-   
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -204,10 +235,7 @@ a[data-lightbox]:hover img {
     font-weight: 700;
 }
 
-.social {
-    max-width: 400px;
-    margin: auto;  
-}
+
 
 .h1{
     font-size: 20px;
@@ -280,7 +308,7 @@ form {
 
   .form-group{
       display: flex;
-      flex-direction: row;
+      flex-direction: ;
 
   }
   
@@ -324,7 +352,7 @@ form {
 
 
 
-.et-icon-browser,
+.et-icon-bser,
 .et-icon-edit,
 .et-icon-presentation
  {
@@ -333,7 +361,7 @@ form {
     display: inline-block;
 }
 
-.et-icon-browser:before {
+.et-icon-bser:before {
     content: "\e00c"
 }
 .et-icon-presentation:before {
