--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -3,14 +3,13 @@ a {
     color: #333;
     text-decoration: none;
 }
-
-
+   
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 14px;
     line-height: 1.42857143;
     color: #333;
-    background-color: #fff;
+    background-color: #fff
 }
 
 .modal-open {
