--- a/style.css
+++ b/style.css
@@ -17,6 +17,20 @@ body {
     text-align: center;
 }
 
+.services{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.center-col{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    flex-direction: column;
+}
+
 .direction-col {
     flex-direction: column;
 }
@@ -81,11 +95,14 @@ header img {
 }
 
 .bloc-300-m{
-    width: 280px;
+    min-width: 290px;
     margin-right: 30px;
 }
 .bloc-300{
-    width: 250px;
+    min-width: 300px;
+}
+.wrap {
+    flex-wrap: wrap;
 }
 
 #citation{
@@ -300,7 +317,7 @@ footer div ul li {
 
 form {
     margin: 50px auto;
-    width: 350px;
+    width: 310px;
     padding: 1em;
     border: 1px solid #F3976C;
     border-radius: 1em;
@@ -308,7 +325,7 @@ form {
 
   .form-group{
       display: flex;
-      flex-direction: ;
+      flex-direction: column;
 
   }
   
@@ -318,7 +335,8 @@ form {
   
   label {
     display: inline-block;
-    width: 90px;
+    width: 180px;
+    margin-bottom: 5px;
     
 
   }
@@ -335,7 +353,7 @@ form {
   }
   
   button {
-    margin-left: .5em;
+    margin-left: 10px;
   }
 
   button:hover{
@@ -344,12 +362,10 @@ form {
 
 @font-face {
     font-family: et-line;
-    src: url(fonts/et-line.eot);
-    src: url(fonts/et-line.eot?#iefix) format('embedded-opentype'), url(fonts/et-line.woff) format('woff'), url(fonts/et-line.ttf) format('truetype'), url(fonts/et-line.svg#et-line) format('svg');
+    src:  url(fonts/et-line.ttf) format('truetype');
     font-weight: 400;
     font-style: normal
 }
-
 
 
 .et-icon-bser,
@@ -370,6 +386,7 @@ form {
 .et-icon-edit:before {
     content: "\e01c"
 }
+
 
 @media (max-width:768px) {
     
@@ -402,5 +419,12 @@ form {
     }
     header img {
         margin-left: 0;
+    }
+
+    .services{
+        flex-direction: column;
+    }
+    .bloc-300-m{
+        margin: auto;
     }
 }
