maj display-none
Signed-off-by: Vachet Ghislain <vachetghislain@MacMini2018.local>

--- a/style.css
+++ b/style.css
@@ -420,7 +420,7 @@ form {
         flex-direction: column;
     }
     .bloc-300-m{
-        margin: auto;
+        margin-right: 0;
     }
     
 }
