--- a/style.css
+++ b/style.css
@@ -4,12 +4,13 @@ body {
     padding: 0;
     background: #FFF;
     color: #333;
- 
 }
+
 .hors-ecran {
     position: absolute;
     left: -99999rem;
  }
+
 .center-bloc{
     display:flex;
     justify-content: center;
@@ -84,7 +85,6 @@ nav ul{
     list-style: none;
 }
 
-
 .hg {
     height: 100px;
     width: 100px;
@@ -143,7 +143,7 @@ nav ul{
 }
 
 .bloc-mgtop{
-    margin: 100px auto;
+    padding: 100px;
 }
 
 .bloc-bg-texture::before {
@@ -353,6 +353,15 @@ form {
   button:hover{
       font-size: large;
   }
+
+.repeat{
+    background: repeat;
+}
+.fond{
+    background-image: url("img/lines-h2-bg.png");
+   
+    background-size: auto!important;
+}
 
 @font-face {
     font-family: et-line;
